Actions
Bug #9393
closedmailx: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
cmd3.c:850:6: error: this statement may fall through [-Werror=implicit-fallthrough=] if (name[1] == 0) { ^ cmd3.c:857:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0c5b3cb404497f7ec0ae919e1a5650806be59641
commit 0c5b3cb404497f7ec0ae919e1a5650806be59641 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:39.000Z 9393 mailx: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions